Package: doFuture
=================

Version: 0.8.2-9000 [2019-12-28]

 * ...


Version: 0.8.2 [2019-10-29]

DOCUMENTATION:

 * Document also .options.future = list(chunk_size = <count>) to foreach().

DEPRECATED AND DEFUNCT:

 * Option 'doFuture.foreach.export' values 'automatic-unless-.export' and
   'automatic' are defunct. They have been deprecated since doFuture 0.7.0.

BUG FIXES:

 * Package could set '.Random.seed' to NULL, instead of removing it, which in
   turn would produce a warning on "'.Random.seed' is not an integer vector but
   of type 'NULL', so ignored" when the next random number generated.


Version: 0.8.1 [2019-07-20]

NEW FEATURES:

 * Standard output and conditions are now relayed as soon as possible.

BUG FIXES:

 * One of the package tests had a _R_CHECK_LENGTH_1_LOGIC2_=true bug. This bug
   did _not_ affect how the package worked or any of its results.
 

Version: 0.8.0 [2019-03-17]

NEW FEATURES:

 * The foreach() argument '.options.future' (a named list) can already be used
   to control whether "chunking" should take place or not, and if so, how much,
   e.g. .options.future = list(scheduling = 2.0)).  As an alternative to
   'scheduling', this can now be specified by 'chunk.size' - the number of
   elements processed per future ("chunk").  In R 3.5.0, the parallel package
   introduced argument 'chunk.size'.

 * Elements can be processed in random order by setting attribute 'ordering'
   of '.options.future' elements 'chunk.size' or 'scheduling', e.g. 
   .options.future = list(chunk.size = structure(TRUE, ordering = "random")).
   This  improve load balancing in cases where there is a correlation
   between processing time and ordering of the elements. Note that the order of
   the returned values is not affected when randomizing the processing order.

 * Passing argument '.options.future = list(stdout = ...)' can be used to
   to control how standard output should be relayed.  See ?future::Future for